2009-08-05 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.99.2-1 :
	new upstrem release = go-oo 3.1.1 beta 2

2009-07-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.98.2-2 :
	rebuild with lowered compiler optimizations
	http://bugs.archlinux.org/task/15290

2009-07-02 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.98.2-1 :
	new upstrem release = go-oo 3.1.1 alpha 2
	build with system libjpeg 7
	rebuild for xulrunner, hotfix patch added from Fedora
	change install path name (remove releaseversion in path)

2009-06-24 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.98.1-1 :
	new upstrem release = go-oo 3.1.1 alpha 1
	enable OOXMLExport patch section needed by some other patches
	enable experimental kde integration

2009-06-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0-1 :
	3.1.0.6 rebuild against new icu, rc7 = final

2009-05-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.6-1 :
        new upstream release = go-oo 3.1.0 rc7

2009-05-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.4-1 :
        new upstream release = go-oo 3.1.0 rc5

2009-05-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.3-1 :
        new upstream release = go-oo 3.1.0 rc4
	*cancelled*

2009-05-19 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.2-1 :
	new upstream release = go-oo 3.1.0 rc3

2009-05-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.1-1 :
	new upstream release = go-oo 3.1.0 rc2

2009-05-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0.0-1 :
	new upstream release = go-oo 3.1.0 rc1
	add NotDebian, CairoFonts, Shrink, Lockdown, Gcc44
	 sections to ArchLinux patches, not yet upstream

2009-05-02 Andreas Radke <andyrtr at archlinux.org>

        * 3.0.99.7-2 :
	build without stlport on x86_64 and with on i686
	to fix extensions (e.g. SunPDFImport)
	try move mono and gstreamer to optdepends

2009-04-25 Andreas Radke <andyrtr at archlinux.org>
