@@ -2,14 +2,13 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=go-openoffice
-pkgver=3.1.0.99.2
-_GOver=3.1.0.99.2 # = 3.1.1.beta2
+pkgver=3.1.0.99.3
+_GOver=3.1.0.99.3 # = 3.1.1.beta3
 pkgrel=1
 pkgdesc="OpenOffice.org - go-oo.org enhanced version of SUN's office suite"
 arch=('i686' 'x86_64')
 _go_tree="OOO310"
-_dir=DEV300
-_ootag=ooo310-m17 # m11 = OOo 3.1.0 RC2 = final
+_ootag=ooo310-m18 # m19 = OOo 3.1.1 RC2 = final?
 license=('LGPL3')
 url="http://go-oo.org/"
 install=${pkgname}.install
@@ -30,6 +29,7 @@ makedepends=('automake' 'autoconf' 'wget' 'bison' 'findutils' 'flex' 'gawk' 'gcc
 	'pam' 'sane' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.1.2" 'apache-ant' 'cairo' 
 	'gperf' 'libcups' 'pstoedit' 'gconf' "openjdk6>=1.5-4" 'unixodbc' 'mesa>=7.5' 'poppler>=0.10.7'
 	'gstreamer0.10-base>=0.10.23'  'mono>=2.4.2' 'kdelibs>=4.3.0') # 'boost' # 'libjpeg' 
+backup=(usr/lib/go-openoffice/program/sofficerc)
 provides=('openoffice-base')
 conflicts=('openoffice-base')
 _mirror="http://download.go-oo.org/"
@@ -53,30 +53,30 @@ source=(${_mirror}/${_go_tree}/ooo-build-${_GOver}.tar.gz
 noextract=(ooo-cli-prebuilt-3.1.1.tar.bz2 cairo-1.4.10.tar.gz mdbtools-0.6pre1.tar.gz
 	${_ootag}-{artwork,base,bootstrap,calc,components,extras,filters,help,impress,libs-gui,libs-core,libs-extern,postprocess,sdk,testing,ure,writer,libs-extern-sys,extensions}.tar.bz2
 	extras-3.tar.bz2 biblio.tar.bz2 unowinreg.dll scsolver.2008-10-30.tar.bz2 libwpd-0.8.14.tar.gz libwps-0.1.2.tar.gz libwpg-0.1.3.tar.gz ooo_oxygen_images-2009-06-17.tar.gz)
-md5sums=('8098a6fa0dd08d4664cae7bd56377c58'
+md5sums=('89c911c8713dc3064fb1763b6b61b950'
          'a1ff3d64d0ca95c62a15c07e7f19f193'
          '222a42af5b874ea15dbafd07b2381aee'
          '5598a5e500ad922e37b159dee72fc993'
          '246e8f38b2a1af1bcff60ee0da59300b'
-         'a84e835db27ab84071624d0f1880aed8'
-         '9952306fc882cb17106b79613a644b05'
-         '634e283e6de8b6de175d494be22bb618'
-         'd4a99553a91b29976e61b90566af735b'
-         'c5002d3bb95584559483d203a3db2b49'
-         '6e1d95c7f2cce6b191da6aa589cfe6a6'
-         '104b9c30285ebcf65abcfd62f5ca494e'
-         '2cf76d01c3bfe5b4c58656d668c40ca4'
-         '9dc869852bd082e5e936a9a4cf6d07a5'
-         '6bd9d8c6d66e22d678f3bcf88caf51c7'
-         'df13639a72e5fbb05b8287728da2932f'
-         '60634bfe587f2595651528c6e331c54c'
-         'df7a0d06ba0de2a6f92b3b913d009593'
-         'e2f4909047730201ee0a3ffd21e537f3'
-         '557bd0215fa41749adfb79830a84e75a'
-         '248c45aaea866b798d436df1a68d1fa6'
-         '45fb57faced9d432f22b6e76ca179adc'
-         'eb068035a34440270d9fba2dbd63c023'
-         'ea38f43aed5dc40fdf3ebfb0f3c86251'
+         'd043092dfd2974bedb036854f4b2c2f5'
+         'c29fe7996b06f62737d0f1680509cfbe'
+         'bbd4c7e9a9cc5799eead5b67f36543f9'
+         '914f14c4d35196591587ee031b31dfe0'
+         '61740e0521533543c5a26da98d24ebd0'
+         'b8ed343ef9e91ef51b6b38d54e8d45ac'
+         '37c24740dc5f2ed6fb4f350b8b4b9d2b'
+         'aec3f1df346047bcfc3fa8d47bc6d121'
+         '38fef95dcd5353f08857905a635c4e42'
+         '4bc0e0ad22553ff49e70fe42c01dc049'
+         'd23e742eab8441d0d7209995f3b343f6'
+         'cae346105f5990509c47f2af265838f6'
+         '02f475d2f6c4f58d4227b55e69c50a66'
+         'f6485d55a78b3f5bb6fef47c19a124a7'
+         'db066f855e529b3fbddf13c5c42378cb'
+         'a91f198250264e9690bdc0d87488e2cf'
+         '93ab00c3a60d49caa028d8ad6a859ea9'
+         '278eb4eba6b7d80f2b1fce62e23285fc'
+         '1403588a9ccc0cd528172d2b4036a970'
          '36f323a55ee83e9dc968e1b92569b62a'
          '1948e39a68f12bfa0b7eb309c14d940c'
          'e3a0b76dcd876f3d721ee7183729153d'
