@@ -1,3 +1,10 @@
+2009-08-21 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.1.0.99.3-1 :
+	new upstrem release = go-oo 3.1.1 beta 3
+	backup sofficerc file for 
+	http://bugs.archlinux.org/task/15161
+
 2009-08-05 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.1.0.99.2-1 :
